--- a/pom.xml
+++ b/pom.xml
@@ -12,8 +12,14 @@
     <description>This plugin is used to forward metrics, events to your account at Sematext, automatically.</description>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>sematext-jenkins</artifactId>
-    <version>0.1-SNAPSHOT</version>
+    <version>0.1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
+
+    <properties>
+        <jenkins.version>2.235.1</jenkins.version>
+        <java.level>8</java.level>
+        <jenkins.metrics.version>4.0.2.6</jenkins.metrics.version>
+    </properties>
 
     <dependencyManagement>
         <dependencies>
@@ -24,12 +30,13 @@
                 <scope>import</scope>
                 <type>pom</type>
             </dependency>
+            <dependency>
+                <groupId>org.slf4j</groupId>
+                <artifactId>slf4j-api</artifactId>
+                <version>1.7.30</version>
+            </dependency>
         </dependencies>
     </dependencyManagement>
-
-    
-
-    
 
     <repositories>
         <repository>
@@ -43,4 +50,17 @@
             <url>https://repo.jenkins-ci.org/public/</url>
         </pluginRepository>
     </pluginRepositories>
+
+    <dependencies>
+        <dependency>
+            <groupId>org.jenkins-ci.plugins</groupId>
+            <artifactId>metrics</artifactId>
+            <version>${jenkins.metrics.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.dropwizard.metrics</groupId>
+            <artifactId>metrics-core</artifactId>
+            <version>4.1.6</version>
+        </dependency>
+    </dependencies>
 </project>
