--- a/pom.xml
+++ b/pom.xml
@@ -11,7 +11,7 @@
     <name>Sematext Plugin</name>
     <description>This plugin is used to forward metrics, events to your account at Sematext, automatically.</description>
     <groupId>io.jenkins.plugins</groupId>
-    <artifactId>sematext-jenkins</artifactId>
+    <artifactId>sematext</artifactId>
     <version>0.1.0-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
@@ -21,6 +21,15 @@
         <jenkins.metrics.version>4.0.2.6</jenkins.metrics.version>
         <jenkins.jackson2-api.version>2.11.2</jenkins.jackson2-api.version>
     </properties>
+
+    <licenses>
+        <license>
+            <name>Apache License, Version 2.0</name>
+            <url>https://www.apache.org/licenses/LICENSE-2.0.txt</url>
+            <distribution>repo</distribution>
+            <comments>A business-friendly OSS license</comments>
+        </license>
+    </licenses>
 
     <dependencyManagement>
         <dependencies>
