--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,27 @@
         </developer>
     </developers>
 
+    <scm>
+        <connection>scm:git:git://github.com/jenkinsci/sematext-plugin.git</connection>
+        <developerConnection>scm:git:git@github.com:jenkinsci/sematext-plugin.git</developerConnection>
+        <url>https://github.com/jenkinsci/sematext-plugin/</url>
+        <tag>HEAD</tag>
+    </scm>
+
+    <repositories>
+        <repository>
+            <id>repo.jenkins-ci.org</id>
+            <url>https://repo.jenkins-ci.org/public/</url>
+        </repository>
+    </repositories>
+
+    <pluginRepositories>
+        <pluginRepository>
+            <id>repo.jenkins-ci.org</id>
+            <url>https://repo.jenkins-ci.org/public/</url>
+        </pluginRepository>
+    </pluginRepositories>
+
     <dependencyManagement>
         <dependencies>
             <dependency>
