--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <url>https://github.com/jenkinsci/sematext-plugin</url>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>sematext</artifactId>
-    <version>1.0.0-alpha</version>
+    <version>1.0.1-alpha-SNAPSHOT</version>
     <packaging>hpi</packaging>
 
     <properties>
