--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <url>https://github.com/jenkinsci/sematext-plugin</url>
     <groupId>io.jenkins.plugins</groupId>
     <artifactId>sematext</artifactId>
-    <version>1.0.3-SNAPSHOT</version>
+    <version>1.0.3</version>
     <packaging>hpi</packaging>
 
     <properties>
@@ -44,7 +44,7 @@
         <connection>scm:git:git://github.com/jenkinsci/sematext-plugin.git</connection>
         <developerConnection>scm:git:git@github.com:jenkinsci/sematext-plugin.git</developerConnection>
         <url>https://github.com/jenkinsci/sematext-plugin/</url>
-        <tag>HEAD</tag>
+        <tag>sematext-1.0.3</tag>
     </scm>
 
     <repositories>
